# bike-sharing-prediction

./: README.md  pyproject.toml
data/: 2011-01.csv  2011-02.csv  2011-03.csv  2011-04.csv  2011-05.csv  2011-06.csv  2011-07.csv  2011-08.csv  2011-09.csv  2011-10.csv  2011-11.csv  2011-12.csv  2012-01.csv  2012-02.csv  2012-03.csv  2012-04.csv  2012-05.csv  2012-06.csv  2012-07.csv  2012-08.csv  2012-09.csv  2012-10.csv  2012-11.csv  2012-12.csv
deploy/: docker-compose.yml
src/bike_sharing_prediction/: __init__.py  config.py  sensor.py  utils.py
src/bike_sharing_prediction/assets/: bike_sharing_data.py  bike_sharing_features.py  models.py  train_data_log_transformed.py  train_test.py
src/bike_sharing_prediction/io_managers/: csv_fs_io_manager.py  csv_lakefs_io_manager.py  pkl_fs_io_manager.py
src/bike_sharing_prediction/resources/: data_loaders.py  lakefs_client.py
